# transformational_measures_experiments

./: .unison.run.py.5339ad4ce1a0fd6cf51ef0c084e0151e.unison.tmp  README.md  config.py  experiment_accuracy_vs_rotation.py  experiment_definitions.py  experiment_plot_heatmaps.py  experiment_plot_layers.py  experiment_retraining.py  experiment_runner_training.py  experiment_runner_variance.py  experiment_training.py  experiment_variance.py  hello.py  invariance_run.py  latest_training_results.txt  measure.py  measure_accuracy.py  neuralexplorer_run.py  notes.md  parsers.py  plot_experiments.py  plot_sets.sh  plot_variances_heatmaps.py  plot_variances_models.py  profile.dot  profile.txt  profiletot.txt  pyproject.toml  refactor.md  rename_results.py  requirements-torch.txt  requirements.txt  retrain.sh  run.py  run2.py  runner_utils.py  same_equivariance_run.py  show_training_results.py  test_run.py  todo.md  (+7 more)
config/: __init__.py  datasets.py  measures.py  models.py  parameters.py  transformations.py
datasets/: __init__.py  cifar10.py  handshape.py  mnist.py  mnist_rot.py  util.py
doc/: design.md
experiment/: accuracy.py  model_loading.py  retraining.py  training.py  util.py  utils_runner.py  variance.py  variance_result.py
experiments/: __init__.py  aggregation.py  architecture.py  base.py  common.py  compare_measures.py  data_augmentation.py  dataset.py  feature_maps.py  models.py  normalization.py  stratified.py  test.py  tipooling.py  tm_experiment.py  tmexp.code-workspace  train.py  transformation.py  weights.py
models/: __init__.py  all_conv.py  ff.py  stn.py  (+9 more)
(+210 files in other folders)
